# akil_01

./: CMakeLists.txt  akil01.tar  kopyala.bat  partitions.csv
data/: TR-tr.lng  lamp.json  lamp_bos.json
main/: CMakeLists.txt  core.h  idf_component.yml  main.cpp
main/comp/: cur_button.cpp  cur_button.h  jsontool.cpp  jsontool.h  lamp_button.cpp  lamp_button.h  language.cpp  language.h  rs485.cpp  rs485.h  udp_server.cpp  udp_server.h  wifi.cpp  wifi.h
main/images/: Down_60.c  Thermo2_48.c  Up_60.c  Wifi_5_48.c  Wifi_alarm_5_48.c  admin0.c  backlite.c  defa.c  digi80.c  hmin_b.c  home_48.c  lamba1_off_60.c  lamba1_on_60.c  lamba2_off_60.c  lamba2_on_60.c  lamps_48.c  manual_60.c  motor.c  night_60.c  off_60.c  sag_60.c  sag_buyuk.c  save.c  screensaver_60.c  settings_48.c  sol_60.c  sol_buyuk.c  wifi.c
main/screen/: ana_ekran.cpp  ana_ekran.h  startup.cpp  startup.h
main/tools/: config.cpp  config.h  events.cpp  mainconfig.cpp  tools.cpp  udp_server_callback.cpp
main/utils/: content.cpp  content.h  fooder.cpp  fooder.h  header.cpp  header.h
main/utils/pages/: core_ayar.h  lambapage.cpp  lambapage.h  lamp_page.cpp  lamp_page.h  mainpage.cpp  mainpage.h  setup.cpp  setup.h  sub_content.h  termostat.cpp  termostat.h
main/utils/pages/subpages/: admin_ayar.cpp  admin_ayar.h  backlite_ayar.cpp  backlite_ayar.h  screen_saver.cpp  screen_saver.h  wifi_ayar.cpp  wifi_ayar.h  wifi_scan.cpp
