idf_component_register(
    SRCS "main.cpp" "tools/config.cpp" "comp/rs485.cpp"
    SRCS "comp/language.cpp"
    SRCS "comp/wifi.cpp"
    SRCS "comp/udp_server.cpp"
    SRCS "screen/startup.cpp"
    SRCS "screen/ana_ekran.cpp"

    SRCS "utils/fooder.cpp"
    SRCS "utils/header.cpp"
    SRCS "utils/content.cpp"

    SRCS "utils/pages/lampapage.cpp"
    SRCS "utils/pages/mainpage.cpp"
    SRCS "utils/pages/setup.cpp"
        SRCS "utils/pages/subpages/backlite_ayar.cpp"
        SRCS "utils/pages/subpages/screen_saver.cpp"
        SRCS "utils/pages/subpages/wifi_ayar.cpp"
        SRCS "utils/pages/subpages/admin_ayar.cpp"
    SRCS "utils/pages/termostat.cpp"    
    

    SRCS "images/bg.c"
    SRCS "images/logo.c"
    SRCS "images/sag_60.c"
    SRCS "images/sol_60.c"
    SRCS "images/home_48.c"
    SRCS "images/wifi_alarm_5_48.c"
    SRCS "images/wifi_5_48.c"
    SRCS "images/Thermo2_48.c"
    SRCS "images/lamps_48.c"
    SRCS "images/settings_48.c"
    SRCS "images/backlite.c"
    SRCS "images/wifi.c"
    SRCS "images/defa.c"
    SRCS "images/admin0.c"
    SRCS "images/screensaver_60.c"
    SRCS "images/save.c"
    SRCS "images/digi80.c"
    SRCS "images/sag_buyuk.c"
    SRCS "images/sol_buyuk.c"
    SRCS "images/hmin_b.c"
    SRCS "images/lamba1_on_60.c"
    SRCS "images/lamba1_off_60.c"
    SRCS "images/lamba2_on_60.c"
    SRCS "images/lamba2_off_60.c"

    INCLUDE_DIRS ""
)
